--- a/6FtTracing/app/src/main/AndroidManifest.xml
+++ b/6FtTracing/app/src/main/AndroidManifest.xml
@@ -1,22 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.arun.cs225.sixfeettracing">
-
     <!-- Bluetooth Permissions -->
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-    <!-- Bluetooth Permissions -->
-
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" /> <!-- Bluetooth Permissions -->
     <!-- Location Permissions -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <!-- Location Permissions -->
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> <!-- Location Permissions -->
     <!-- Internet Permission -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <!-- Internet Permission -->
 
     <application
         android:allowBackup="true"
@@ -24,8 +18,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.6FtTracing">
+        android:theme="@style/Theme.6FtTracing"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".StatsActivity"></activity>
         <activity android:name=".TrackerActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,6 +28,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <service
             android:name=".firebase.Handler"
             android:exported="false">
@@ -41,6 +37,5 @@
             </intent-filter>
         </service>
     </application>
-
 
 </manifest>
